--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,87 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+#root {
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App {
+  padding: 4rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
+
+.main-nav {
+  display: flex;
+}
+
+.main-nav h1 {
+  font-size: 2rem;
+  margin: 0;
+}
+
+.main-nav h1 span {
+  font-size: 1.7rem;
+  color: gray;
+}
+
+.nav-links {
+  margin-left: auto;
+}
+
+.nav-links button {
+  padding: .6rem;
+  outline: none;
+  border:none;
+  background: transparent;
+  color: blue;
+  font-size: 1rem;
+}
+
+.nav-links button:hover {
+  color: gray;
+}
+
+.form-container {
+  margin-top: 4rem;
+}
+
+/* MODAL STUFF */
+
+.modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  transform: scale(1.1);
+}
+
+.modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 1rem 1.5rem;
+  width: 24rem;
+  border-radius: 0.5rem;
+}
+
+/* NOTE CSS */
+
+.note {
+  width: 31.3%;
+  display: inline-block;
+  margin: .5rem;
+}
+
+.note .form-container {
+  padding: 1rem;
+  margin-top: 0;
+}
+
